--- a/package.json
+++ b/package.json
@@ -48,10 +48,17 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.5.2",
     "vite": "^5.3.1"
+  },
+  "lint-staged": {
+    "*": [
+      "npm run format",
+      "git add ."
+    ]
   }
 }
