--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.5.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "lint-staged": {
     "*": [
