--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "axios": "^1.8.1",
     "electron-updater": "^6.1.7",
     "react-router-dom": "^7.2.0",
     "sqlite3": "^5.1.7",
