--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.8.1",
     "electron-updater": "^6.1.7",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.3",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   },
